--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,35 @@ jobs:
      working_directory: ~/ccitest
      docker:
        - image: circleci/ruby:2.3
+       - image: postgres:9.6
+         environment:
+           POSTGRES_USER: ubuntu
+           POSTGRES_DB: contacts
      steps:
        - checkout
+       - setup_remote_docker
        - run:
-           command: "make"
+           name: Install Docker client
+           command: |
+             set -x
+             VER="17.03.0-ce"
+             curl -L -o /tmp/docker-$VER.tgz https://get.docker.com/builds/Linux/x86_64/docker-$VER.tgz
+             tar -xz -C /tmp -f /tmp/docker-$VER.tgz
+             mv -f /tmp/docker/* /usr/bin
+       - run:
+           name: Install Docker Compose
+           command: |
+             set -x
+             curl -L https://github.com/docker/compose/releases/download/1.14.0/docker-compose-`uname -s`-`uname -m` > /usr/local/bin/docker-compose
+             chmod +x /usr/local/bin/docker-compose
+       - run:
+           name: Build service
+           command: make
+       - run:
+           name: Start container and verify it's working
+           command: |
+             set -x
+             docker-compose up -d
+       - run:
+           name: just sleep to make this visible
+           command: sleep 30
